--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI='mongodb+srv://root:rootbanti@completecoding.a32mglo.mongodb.net'
+CLERK_WEBHOOK_SECRET ='whsec_9r8/eOvJ2fCsISwJZN9BSL3EW1+lyW+8'
